...
  String location;

  DayEvent(this.time, this.task, this.desc, this.isFinish, this.isImportant, {this.location});
}

//final List<Event> _eventList = [
//  new Event("08:00", "Have coffe with Sam", "Personal", true),
//  new Event("10:00", "Meet with sales", "Work", true),
//  new Event("12:00", "Call Tom about appointment", "Work", false),
//  new Event("14:00", "Fix onboarding experience", "Work", false),
//  new Event("16:00", "Edit API documentation", "Personal", false),
//  new Event("18:00", "Setup user focus group", "Personal", false),
//];
...
